# Atalanta

./: .gitmodules
examples/embassy-atalanta/: Cargo.toml
examples/embassy-atalanta/src/: lib.rs  time_driver.rs
examples/hello_rt/examples/: async.rs
examples/rt_minimal/: Cargo.toml  build.rs  memory.x
examples/rt_minimal/.cargo/: config.toml
examples/rt_minimal/examples/: led.rs  uart.rs
examples/rt_minimal/src/: lib.rs
examples/rtic_tests/: Cargo.toml  Justfile  README.md  rust-toolchain.toml
examples/rtic_tests/.cargo/: config.toml
examples/rtic_tests/examples/: sw_and_hw.rs
