[package]
name = "embassy-atalanta"
version = "0.1.0"
edition = "2021"

[dependencies]
bsp = { package = "atalanta_bsp", version = "0.1.0", path = "../atalanta_bsp" }
embassy-time = { version = "0.4.0", optional = true }
embassy-embedded-hal = { version = "0.3.0", default-features = false }
embassy-time-queue-utils = { version = "0.1.0", optional = true }
embassy-time-driver = { version = "0.2.0", optional = true }
critical-section = "1.2.0"
embassy-sync = "0.6.2"

[features]
default = ["rt", "ufmt", "time-driver-tim3"]

## RISC-V runtime (enabled by default)
rt = ["bsp/rt"]

ufmt = ["bsp/ufmt"]
fpga = ["bsp/fpga"]
rtl-tb = ["bsp/rtl-tb"]

## Enable features requiring `embassy-time`
time = ["dep:embassy-time", "embassy-embedded-hal/time"]

# Features starting with `_` are for internal use only. They're not intended
# to be enabled by other crates, and are not covered by semver guarantees.
_time-driver = ["dep:embassy-time-driver", "time", "dep:embassy-time-queue-utils"]

## Use TIM0 as time driver
time-driver-tim0 = ["_time-driver"]
## Use TIM1 as time driver
time-driver-tim1 = ["_time-driver"]
## Use TIM2 as time driver
time-driver-tim2 = ["_time-driver"]
## Use TIM3 as time driver
time-driver-tim3 = ["_time-driver"]
